--- a/src/main/resources/templates/front/answers.html
+++ b/src/main/resources/templates/front/answers.html
@@ -2,7 +2,9 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:include="include :: head('做题吧 - 答过题室')"></head>
 <style>
-    .layui-table-header th{text-align:center!important;}
+    .layui-table-header th {
+        text-align: center !important;
+    }
 </style>
 <body>
 <th:block th:include="include :: f_header"></th:block>
@@ -48,6 +50,18 @@
             ]
         });
 
+        function formAjax(url, params) {
+            $.post(url, params, function (data) {
+                if (data.code === -1) {
+                    layer.msg(data.msg, {icon: 5, time: 1000});
+                } else {
+                    layer.msg(data.msg, {icon: 6, time: 2000, end: function () {parent.window.location.reload();}});
+                }
+            }, 'json').fail(function (event) {
+                layer.msg(event.responseText, {icon: 5, time: 1000});
+            });
+        }
+
         table.on('tool', function (obj) {
             let data = obj.data;
             console.log(data)
@@ -59,7 +73,7 @@
                     console.log('gon')
                     break;
                 case "del":
-                    console.log('del')
+                    formAjax('/user/answerDel', {'id': obj.data.id});
                     break;
                 case "redo":
                     console.log('redo')
