--- a/src/main/resources/templates/front/index.html
+++ b/src/main/resources/templates/front/index.html
@@ -60,7 +60,7 @@
                             答题时间: <span class="layui-border-red" th:text="${room?.timeLen}">15</span>分钟<br>
                         </div>
                         <div class="layui-col-xs4 layui-col-sm4 layui-col-md4" style="text-align: center;">
-                            <img src="/images/logo.png"/>
+                            <img src="/images/zuotiba.png" width="95%"/>
                         </div>
                         <div class="layui-col-space5" style="margin-top: 10px;" th:classappend="${role==5?'layui-hide':''}">
                             <hr/>
