--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -10,14 +10,16 @@
     <link rel="Bookmark" th:href="@{/favicon.ico}"/>
     <link rel="Shortcut Icon" th:href="@{/favicon.ico}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/layui.css}" media="all"/>
-    <link rel="stylesheet" type="text/css" th:unless="${#request.servletPath.startsWith('/admin')}" th:href="@{/css/index.css}"/>
+    <link rel="stylesheet" type="text/css" th:unless="${#request.servletPath.startsWith('/admin')}"
+          th:href="@{/css/index.css}"/>
     <script type="text/javascript" th:src="@{/js/layui.js}"></script>
     <!--[if lt IE 9]>
     <script type="text/javascript" th:src="@{/js/html5shiv.js}"></script>
     <script type="text/javascript" th:src="@{/js/respond.min.js}"></script><![endif]--><!--[if IE 6]>
     <script type="text/javascript" th:src="@{/js/DD_belatedPNG_0.0.8a-min.js}"></script>
     <script>DD_belatedPNG.fix('*');</script><![endif]-->
-    <script type="text/javascript" th:if="${#request.servletPath.startsWith('/admin')}" th:src="@{/js/lay-config.js}"></script>
+    <script type="text/javascript" th:if="${#request.servletPath.startsWith('/admin')}"
+            th:src="@{/js/lay-config.js}"></script>
     <script type="text/javascript" th:unless="${#request.servletPath.startsWith('/admin')}">
         function layPage(id, count, curr, limit) {
             layui.laypage.render({
@@ -67,7 +69,15 @@
             // 重新渲染
             element.init();
             // 首页横幅
-            carousel.render({elem: '#banner', height: '300px', interval: 3000, anim: 'fade', arrow: 'hover', indicator: 'outside'});
+            carousel.render({
+                elem: '#banner',
+                height: '300px',
+                width: '100%',
+                interval: 3000,
+                anim: 'fade',
+                arrow: 'hover',
+                indicator: 'outside'
+            });
 
             // 初始化栏目
             function layDrop(clazz, datas, url) {
@@ -161,7 +171,8 @@
 <!-- 尾部信息 -->
 <div th:fragment="footer">
     <div class="layui-footer">
-        <p>© 2025 <a href="#" target="_blank" style="color: #3498db; text-decoration: none;">做题吧</a> 版权所有 | 冀ICP备12345678号</p>
+        <p>© 2025 <a href="#" target="_blank" style="color: #3498db; text-decoration: none;">做题吧</a> 版权所有 |
+            冀ICP备12345678号</p>
     </div>
     <!-- 移动端遮罩 -->
     <div class="site-mobile-shade"></div>
@@ -170,8 +181,8 @@
 <div th:fragment="f_header">
     <div class="layui-header" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
         <div id="mainNav" class="layui-container layui-row" style="margin-bottom: 20px;">
-            <div class="layui-logo" style="color: #fff; font-size: 22px; padding-top: 10px;">
-                <img th:src="@{/images/logo.png}" alt="logo" height="30px"/>
+            <div class="layui-logo" style="color: #fff; font-size: 22px;">
+                <img th:src="@{/images/logo.png}" alt="logo"/>
                 <cite>做题吧</cite>
             </div>
             <ul class="layui-nav layui-layout-left" style="background: transparent;">
