--- a/src/main/resources/templates/front/login.html
+++ b/src/main/resources/templates/front/login.html
@@ -3,7 +3,7 @@
 <head th:include="include :: head('做题吧 - 首页')"></head>
 <link rel="stylesheet" type="text/css" th:href="@{/css/login.css}" />
 <body>
-<div class="layui-container lay-user-display-show" id="lay-user-login">
+<div class="layui-container index-body lay-user-display-show" id="lay-user-login">
     <div class="lay-user-login-main">
         <div class="lay-user-login-box lay-user-login-body layui-form">
             <div class="layui-form-item">
